--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 
 ## User settings
 xcuserdata/
+# Xcode build system
+DerivedData/
+*.xcworkspace/
+*.xcworkspacedata
+*.xcuserdatad/
+*.xcscmblueprint
+
 
 ## Obj-C/Swift specific
 *.hmap
