--- a/DemoURLScheme/DemoURLScheme/Info.plist
+++ b/DemoURLScheme/DemoURLScheme/Info.plist
@@ -4,6 +4,19 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
+        <key>LSApplicationQueriesSchemes</key>
+        <array>
+            <string>fb</string>  <!-- Facebook -->
+            <string>instagram</string>  <!-- Instagram -->
+            <string>twitter</string>  <!-- Twitter -->
+            <string>whatsapp</string>  <!-- WhatsApp -->
+            <string>zalo</string>  <!-- Zalo -->
+            <string>tg</string>  <!-- Telegram -->
+            <string>sms</string>  <!-- SMS -->
+        </array>
+
+		<key>UIApplicationSupportsTabbedSceneCollection</key>
+		<false/>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
@@ -15,8 +28,6 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
