base ui theo figma

--- a/DemoURLScheme/DemoURLScheme/Info.plist
+++ b/DemoURLScheme/DemoURLScheme/Info.plist
@@ -4,20 +4,22 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
-        <key>LSApplicationQueriesSchemes</key>
-        <array>
-            <string>fb</string>  <!-- Facebook -->
-            <string>instagram</string>  <!-- Instagram -->
-            <string>twitter</string>  <!-- Twitter -->
-            <string>whatsapp</string>  <!-- WhatsApp -->
-            <string>zalo</string>  <!-- Zalo -->
-            <string>tg</string>  <!-- Telegram -->
-            <string>sms</string>  <!-- SMS -->
-        </array>
-
-		<key>UIApplicationSupportsTabbedSceneCollection</key>
-		<false/>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+            <string>fb</string>
+                <string>fb-messenger</string>
+                <string>instagram</string>
+                <string>twitter</string>
+                <string>twitterauth</string>
+                <string>whatsapp</string>
+                <string>zalo</string>
+                <string>zaloshare</string>
+                <string>tg</string>
+                <string>sms</string>
+		</array>
 		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+		<key>UIApplicationSupportsTabbedSceneCollection</key>
 		<false/>
 		<key>UISceneConfigurations</key>
 		<dict>
