--- a/DemoURLScheme/DemoURLScheme/Info.plist
+++ b/DemoURLScheme/DemoURLScheme/Info.plist
@@ -5,6 +5,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fb</string>
+        <string>fb-messenger</string>
 		<string>instagram</string>
 		<string>twitter</string>
 		<string>whatsapp</string>
