--- a/DemoURLScheme/DemoURLScheme/Info.plist
+++ b/DemoURLScheme/DemoURLScheme/Info.plist
@@ -12,6 +12,7 @@
         <string>zalo</string>
         <string>tg</string>
         <string>sms</string>
+        <string>instagram-stories</string>
     </array>
 
     <key>UIApplicationSceneManifest</key>
@@ -55,10 +56,13 @@
 
     <!-- Quyền truy cập và lưu vào thư viện ảnh -->
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>Ứng dụng cần quyền truy cập thư viện ảnh để lưu và chia sẻ video.</string>
-
+    <string>This app requires access to the photo library.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>Ứng dụng cần quyền lưu video vào thư viện ảnh.</string>
+    <string>This app requires permission to save photos and videos.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app does not require access to the microphone.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app requires access to the camera.</string>
 
 </dict>
 </plist>
