--- a/DemoDragtoDeleteCell/DemoDragtoDeleteCell/Info.plist
+++ b/DemoDragtoDeleteCell/DemoDragtoDeleteCell/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fb</string>
+        <string>fb-messenger</string>
+        <string>instagram</string>
+        <string>twitter</string>
+        <string>whatsapp</string>
+        <string>zalo</string>
+        <string>tg</string>
+        <string>sms</string>
+        <string>instagram-stories</string>
+    </array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
